[Rishav] feat: implement employee APIs for fetching all, by ID, and by hire date